Prepare for API v2 (#155)
* dynamic html rendering with pug
* separate API v1 to ./api-v1
* fix to catch promise rejection
